[package]
name = "yozuk-slack"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.138"
serde_derive = "1.0.138"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.11", features = ["json", "stream", "multipart"] }
warp = "0.3.2"
yozuk = "0.19.3"
yozuk-sdk = "0.19.1"
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["env"] }
tempfile = "3.3.0"
mediatype = "0.19.3"
futures-util = "0.3.21"
gh-emoji = "1.0.6"
lazy-regex = "2.3.0"
